Twitter feed spacing fix.

--- a/wp-content/themes/environics/assets/sass/elements/_forms.scss
+++ b/wp-content/themes/environics/assets/sass/elements/_forms.scss
@@ -128,7 +128,7 @@ textarea {
 .comment-container, .application-form, .report-form {
 	// width: 100%;
 	// padding: 2rem 1.25rem; 
-	@extend .block;
+	// @extend .block;
 	// @extend .container;
 
 	.submit {
