--- a/wp-content/themes/environics/assets/sass/elements/_media.scss
+++ b/wp-content/themes/environics/assets/sass/elements/_media.scss
@@ -51,6 +51,13 @@ body.no-overflow {
 	margin-top: 6rem;
 }
 
+.alm-reveal .no-image.masonry-tile .tile-inner {
+	position: static;
+	transform: none;
+	top: auto;
+	padding-bottom: 6rem;
+}
+
 .tile-inner {
 	padding: 2rem 2rem 8rem 0;
 	position: relative;
@@ -86,23 +93,6 @@ body.no-overflow {
 
 .gutter-sizer {
 	width: 5.88%;
-}
-
-.page-work {
-	.grid-sizer, .masonry-tile {
-		width: 32.3333333333%;
-	}
-}
-
-.thinking-cantrust {
-	.masonry-tile {
-		width: calc(100% - 20px);
-		margin-bottom: 0;
-		margin-left: 10px;
-		margin-right: 10px;
-		height: 388px;
-		margin-bottom: 20px;
-	}
 }
 
 
